--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
           </div>
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
-              <input type="text" class="form-control" ng-model="artist" placeholder="Artist Name" >
-              <button class="btn btn-primary" ng-click="getSongData()"> Submit </button>
+              <input type="text" class="form-control" ng-model="artist" placeholder="Artist Name" ng-keyup="getSongData() ">
+              <select ng-options="item.id as item.label for item in typeValues" ng-model="typeDropdown" ng-change="getSongDataFiltered()"></select>
+  
+
+              Sort by: <select ng-options="item.id as item.label for item in sortValues" ng-model="sortDropdown" ng-change="sortFunc()"></select>
+              <input type="text" class="form-control" ng-model="filterOptions.filterText" placeholder="Search Data">
+              <!-- <button class="btn btn-primary" ng-click="getSongData()"> Submit </button> -->
             </div>
           </form>
         </div>
